--- a/src/assets/styles/cmps/task-column.scss
+++ b/src/assets/styles/cmps/task-column.scss
@@ -68,7 +68,7 @@
 
     &.task-column-status {
         color: rgb(255, 255, 255);
-        font-weight: 600;
+        font-weight: 500;
         text-transform: capitalize;
         font-size: 12px;
 
@@ -165,7 +165,7 @@
 
     .person-menu {
         // position: absolute;
-        width: 264px;
+        // width: 264px;
         top: 100%;
         right: 0;
         z-index: 35;
