--- a/src/assets/styles/cmps/_app-side-bar.scss
+++ b/src/assets/styles/cmps/_app-side-bar.scss
@@ -126,6 +126,7 @@
             display: flex;
             justify-content: center;
             margin-bottom: 16px;
+            margin-left: -4px;
 
             .dots {
                 margin-top: 5px;
