--- a/src/assets/styles/cmps/_cell-title.scss
+++ b/src/assets/styles/cmps/_cell-title.scss
@@ -72,7 +72,7 @@
     font-weight: bold;
 
     .pulse-left-indicator {
-        background-color: rgb(87, 155, 252);
+        // background-color: rgb(87, 155, 252);
         color: rgb(87, 155, 252);
         flex: 0 0 8px;
         height: 100%;
