--- a/src/assets/styles/cmps/_activity.scss
+++ b/src/assets/styles/cmps/_activity.scss
@@ -10,9 +10,10 @@
     box-shadow: 0 4px 17px 6px rgb(0 0 0 / 10%);
     background-color: #ffffff;
     z-index: 40;
+    overflow: hidden;
 
-    // .slide-log-panel {
-
+    body {
+    }
 
     .activity-log-header {
         padding: 20px;
@@ -108,10 +109,10 @@
                         align-items: center;
                         justify-content: center;
                         border-radius: 3px;
-                        color:rgb(255, 255, 255);
+                        color: rgb(255, 255, 255);
                         font-size: 13px;
                     }
-                    
+
                     .to {
                         color: rgb(96, 96, 96);
                         width: 70px;
@@ -122,7 +123,7 @@
                         align-items: center;
                         justify-content: center;
                         border-radius: 3px;
-                        color:rgb(255, 255, 255);
+                        color: rgb(255, 255, 255);
                         font-size: 13px;
                     }
                 }
