--- a/src/assets/styles/cmps/_cell.scss
+++ b/src/assets/styles/cmps/_cell.scss
@@ -19,7 +19,7 @@
     border-right: 1px solid;
     border-right-color: #fff;
     border-bottom: 1px solid #d0d4e4;
-    border-top: 1px solid #ffffff;
+    // border-top: 1px solid #ffffff;
     min-width: 140px;
     color: #323338;
     color: var(--primary-text-color);
