--- a/src/assets/styles/cmps/_pulse.scss
+++ b/src/assets/styles/cmps/_pulse.scss
@@ -29,7 +29,7 @@
         padding-left: 30px;
         cursor: pointer;
         display: flex;
-        border-bottom: 0 solid;
+        border-bottom: 1px solid;
         border-bottom-color: #fff;
         position: relative;
     }
