--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -30,3 +30,5 @@
 @import './cmps/task-column';
 @import './cmps/activity';
 @import './cmps/progress-bar.scss';
+@import './cmps/board-top-controller';
+@import './cmps/board-preview-contoller';
