--- a/src/assets/styles/cmps/_board-controller.scss
+++ b/src/assets/styles/cmps/_board-controller.scss
@@ -181,9 +181,11 @@
             }
 
             span {
+                color: #323338;
                 font-size: 14px;
                 margin: 0 8px;
                 font-weight: 600;
+                font-family: Roboto-thin;
             }
         }
 
