--- a/src/assets/styles/cmps/_board-filter.scss
+++ b/src/assets/styles/cmps/_board-filter.scss
@@ -12,8 +12,7 @@
         margin-right: 14px;
         position: relative;
         cursor: pointer;
-
-
+        min-width: 110px;
 
         .new-item-modal-btn-wrpper {
             border-radius: 0 4px 4px 0;
