--- a/src/assets/styles/cmps/_board-controller.scss
+++ b/src/assets/styles/cmps/_board-controller.scss
@@ -274,8 +274,8 @@
         height: 100%;
         width: 100%;
         flex-grow: 1;
-        overflow-y: auto;
-        overflow-x: hidden;
+        // overflow-y: auto;
+        // overflow-x: hidden;
         position: relative;
     }
 }
