--- a/src/assets/styles/cmps/_board-group.scss
+++ b/src/assets/styles/cmps/_board-group.scss
@@ -3,7 +3,7 @@
 
     .cell-component {
         border-bottom: none;
-        // text-transform: capitalize;
+        text-transform: capitalize;
         color: #676879;
 
     }
