--- a/src/assets/styles/cmps/_progress-bar.scss
+++ b/src/assets/styles/cmps/_progress-bar.scss
@@ -16,12 +16,12 @@
 
     .empty-cell-nums {
         height: 100%;
-        min-width: 150px;
+        // min-width: 10px;
     }
 
     .empty-cell-date {
         height: 100%;
-        min-width: 120px;
+        min-width: 100px;
     }
 
     .progress-display {
