--- a/src/assets/styles/pages/_home-page.scss
+++ b/src/assets/styles/pages/_home-page.scss
@@ -63,14 +63,16 @@
                 align-items: center;
 
                 .login {
-                    color: inherit;
+                    color: rgb(27, 26, 26);
+                    font-weight: 600;
                     font-family: poppins-light;
                     text-decoration: none;
                     line-height: 1;
                 }
 
                 .signup {
-                    color: inherit;
+                    color: rgb(0, 0, 0);
+                    font-weight: 600;
                     font-family: poppins-light;
                     text-decoration: none;
                     line-height: 1;
