--- a/src/assets/styles/cmps/_app-side-bar.scss
+++ b/src/assets/styles/cmps/_app-side-bar.scss
@@ -11,7 +11,7 @@
 
         .sep {
             width: 80%;
-            margin: auto;
+            margin: 6px;
             border-top: 1px solid #676879;
         }
 
@@ -70,7 +70,7 @@
                     display: flex;
                     justify-content: center;
                     align-items: center;
-                    margin-bottom: 8px;
+                    margin-bottom: 3px;
 
                     .btn-rout {
                         color: white;
@@ -98,7 +98,7 @@
                     display: flex;
                     justify-content: center;
                     align-items: center;
-                    margin-bottom: 8px;
+                    margin-bottom: 3px;
 
                     .btn-rout {
                         color: white;
