--- a/src/assets/styles/cmps/_board-header.scss
+++ b/src/assets/styles/cmps/_board-header.scss
@@ -133,6 +133,7 @@
                             vertical-align: baseline;
                             border: 1px solid #c5c7d0;
                             border-radius: 5px;
+                            min-width: 110px;
 
                             .add-to-board {
                                 padding: 3px 3px;
