--- a/src/assets/styles/cmps/_app-side-bar.scss
+++ b/src/assets/styles/cmps/_app-side-bar.scss
@@ -51,6 +51,10 @@
             justify-content: center;
             align-items: center;
             outline: none;
+
+            .surface-item-image {
+                transform: rotate(180deg);
+            }
         }
 
         .scrollable-navigation-items-area {
