--- a/src/assets/styles/pages/_home-page.scss
+++ b/src/assets/styles/pages/_home-page.scss
@@ -43,6 +43,7 @@
                     .logo-img {
                         width: 40px;
                         margin-right: 16px;
+                        transform: rotate(180deg);
                     }
                 }
 
