--- a/src/assets/styles/cmps/_board-top-controller.scss
+++ b/src/assets/styles/cmps/_board-top-controller.scss
@@ -2,6 +2,7 @@
     .board-add-modal {
         top: 0;
         left: 35px;
+        font-family: Roboto;
     }
 }
 
@@ -14,7 +15,7 @@
     box-shadow: 0 4px 17px 6px rgb(0 0 0 / 10%);
     background-color: #fff;
     border-radius: 8px;
-    padding: 5px;
+    padding: 9px 5px;
 
     .btns-top-add-modal {
         padding: 3px;
@@ -29,7 +30,7 @@
 
             span {
                 font-size: 14px;
-                font-family: Roboto-thin;
+                font-family: Roboto;
             }
 
             &:hover {
@@ -55,7 +56,7 @@
 
             span {
                 font-size: 14px;
-                font-family: Roboto-thin;
+                font-family: Roboto;
             }
 
             &:hover {
@@ -72,11 +73,11 @@
             display: flex;
             align-items: center;
             font-size: 14px;
-            font-family: Roboto-thin;
+            font-family: Roboto;
 
             span {
                 font-size: 14px;
-                font-family: Roboto-thin;
+                font-family: Roboto;
             }
 
             &:hover {
