--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -32,3 +32,6 @@
 @import './cmps/progress-bar.scss';
 @import './cmps/board-top-controller';
 @import './cmps/board-preview-contoller';
+
+// MQ
+@import './mq/mq.scss';
