--- a/src/assets/styles/cmps/_activity.scss
+++ b/src/assets/styles/cmps/_activity.scss
@@ -18,6 +18,7 @@
 
         .activity-log-close-btn {
             cursor: pointer;
+            width: 20px;
         }
 
         .activity-title {
@@ -181,6 +182,7 @@
         &.shown {
             display: block;
             color: #0073ea;
+            height: 100%;
         }
 
         .single-activity {
