--- a/src/assets/styles/cmps/_board-header.scss
+++ b/src/assets/styles/cmps/_board-header.scss
@@ -202,7 +202,7 @@
     position: fixed;
     top: 100px;
     left: 50%;
-    inset: 50% auto auto 50%;
+    // inset: 50% auto auto 50%;
     border: 1px solid rgb(204, 204, 204);
     overflow: hidden;
     border-radius: 8px;
