--- a/src/assets/styles/cmps/_app-side-bar.scss
+++ b/src/assets/styles/cmps/_app-side-bar.scss
@@ -75,6 +75,7 @@
                     justify-content: center;
                     align-items: center;
                     margin-bottom: 3px;
+                    cursor: not-allowed;
 
                     .btn-rout {
                         color: white;
@@ -85,13 +86,8 @@
                         align-items: center;
                         border-radius: 8px;
                         position: relative;
-                        cursor: pointer;
                         outline: none;
                         margin-top: 10px;
-
-                        &:hover {
-                            background-color: rgba(0, 0, 0, 0.427);
-                        }
                     }
                 }
             }
@@ -103,6 +99,7 @@
                     justify-content: center;
                     align-items: center;
                     margin-bottom: 3px;
+                    cursor: not-allowed;
 
                     .btn-rout {
                         color: white;
@@ -113,13 +110,8 @@
                         align-items: center;
                         border-radius: 8px;
                         position: relative;
-                        cursor: pointer;
                         outline: none;
                         margin-top: 10px;
-
-                        &:hover {
-                            background-color: rgba(0, 0, 0, 0.427);
-                        }
                     }
                 }
             }
