--- a/src/assets/styles/cmps/_board-controller.scss
+++ b/src/assets/styles/cmps/_board-controller.scss
@@ -122,10 +122,9 @@
                 padding-right: 29px;
                 line-height: 22px;
                 font-weight: 900;
+                cursor: not-allowed;
 
-                &:hover {
-                    background-color: #e6e9ef;
-                }
+
             }
         }
 
@@ -140,6 +139,7 @@
             font-family: Roboto-Bold;
             border: 1px solid;
             border-color: #676879;
+            cursor: not-allowed;
 
             .name-container {
                 display: flex;
@@ -213,6 +213,7 @@
             padding: 0 6px;
             font-weight: 400;
             padding-right: 3px;
+            cursor: not-allowed;
 
             &:hover {
                 background-color: #e6e9ef;
