--- a/src/assets/styles/cmps/_task-column.scss
+++ b/src/assets/styles/cmps/_task-column.scss
@@ -124,6 +124,8 @@
     .status-edit-btn {
         border: none;
         margin: 2px;
+        width: 122px;
+        height: 37px;
 
         .add-edit-btn {
             color: #0073ea;
